update about page - hendi

--- a/index.html
+++ b/index.html
@@ -36,15 +36,42 @@
     <main class="container">
 
         <section class="Home" id="Home">
-            <img src="foto_engkong_orang.jpeg" alt="foto engkong orang" class="homeImage">
+            <span class="alertAbout">Selamat datang di web sederhana saya</span>
+            <div class="home_content">
+                <img src="foto_engkong_orang.jpeg" alt="foto engkong orang" class="homeImage">
 
-            <h1 class="homeText">WEB PROFIL</ br> YOGA</h1>
+                <h1 class="homeText">WEB PROFIL YOGA</h1>
+            </div>
+
 
         </section>
 
         <section class="About" id="About">
-            <span class="alertAbout">Selamat datang di web sederhana saya</span>
-            <h1 class="title">About</h1>
+            <div class="about_box1 box"></div>
+            <div class="about_box2 box">
+                <h1>ini cerita saya</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, atque tempore, cum facere ad fugiat
+                    deserunt est vero quae reprehenderit dolore in distinctio harum quos obcaecati animi beatae ducimus.
+                    Voluptatem?
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quia delectus cum hic. Obcaecati
+                    excepturi explicabo eos totam minima, et laborum blanditiis repellat, vitae suscipit modi odio
+                    perferendis laudantium incidunt.</p>
+
+
+            </div>
+
+            <div class="about_box3 box">
+                <h1>ini sejarah saya</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptas inventore distinctio
+                    quidem officiis a illum. Iure amet est iste possimus provident. Possimus culpa reprehenderit eum
+                    dolor at nemo assumenda!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eos, doloribus nihil omnis aspernatur
+                    dolore reiciendis, eum ad fuga veniam animi quibusdam. Fugiat ducimus dolorum, doloremque voluptate
+                    cupiditate sint eos.</p>
+            </div>
+            <div class="about_box4 box"></div>
+
         </section>
 
         <section class="Showcase" id="Showcase">
